# Carp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: controller.cpp  controller.h  main.cpp
src/core/: def.h  engine.cpp  engine.h
src/protocol/: option.cpp  option.h  ucci_command.cpp  ucci_command.h  uci_command.cpp  uci_command.h
src/utils/: osyncstream.h
